Fix dropdown menu on mobile, WIP prevent scroll other elements than active

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6481,9 +6481,11 @@ h6 {
             transform: translate3d(0, -50%, 0);
     transition: 0.3s ease-in-out;
     cursor: pointer;
+    pointer-events: none;
   }
   .toolbar--active .notifications-nav__close {
     opacity: 1;
+    pointer-events: auto;
   }
 }
 
